.output.txt
    Updating crates.io index
     Locking 208 packages to latest compatible versions
      Adding base64 v0.21.7 (available: v0.22.1)
      Adding blsttc v1.0.1 (available: v8.0.2)
      Adding generic-array v0.14.7 (available: v0.14.9)
      Adding prost v0.12.6 (available: v0.14.3)
      Adding tonic v0.10.2 (available: v0.14.5)
      Adding tonic-build v0.10.2 (available: v0.14.5)
  Downloaded blsttc v1.0.1
  Downloaded rand_xorshift v0.2.0
  Downloaded ff v0.6.0
  Downloaded tonic-build v0.10.2
  Downloaded prost v0.12.6
  Downloaded ff_derive v0.6.0
  Downloaded prost-derive v0.12.6
  Downloaded tempfile v3.27.0
  Downloaded group v0.6.0
  Downloaded quote v1.0.45
  Downloaded prost-types v0.12.6
  Downloaded prost-build v0.12.6
  Downloaded socket2 v0.6.3
  Downloaded num-bigint v0.2.6
  Downloaded tonic v0.10.2
  Downloaded zerocopy v0.8.42
  Downloaded libc v0.2.183
  Downloaded pairing v0.16.0
  Downloaded 18 crates (2.0MiB) in 0.97s
   Compiling proc-macro2 v1.0.106
   Compiling quote v1.0.45
   Compiling unicode-ident v1.0.24
   Compiling libc v0.2.183
   Compiling cfg-if v1.0.4
   Compiling autocfg v1.5.0
   Compiling pin-project-lite v0.2.17
   Compiling bytes v1.11.1
   Compiling once_cell v1.21.3
   Compiling zerocopy v0.8.42
   Compiling parking_lot_core v0.9.12
   Compiling futures-core v0.3.32
   Compiling smallvec v1.15.1
   Compiling scopeguard v1.2.0
   Compiling hashbrown v0.16.1
   Compiling lock_api v0.4.14
   Compiling equivalent v1.0.2
   Compiling anyhow v1.0.102
   Compiling either v1.15.0
   Compiling getrandom v0.1.16
   Compiling rustversion v1.0.22
   Compiling itoa v1.0.17
   Compiling itertools v0.12.1
   Compiling slab v0.4.12
   Compiling fnv v1.0.7
   Compiling num-traits v0.2.19
   Compiling futures-task v0.3.32
   Compiling serde_core v1.0.228
   Compiling http v0.2.12
   Compiling indexmap v2.13.0
   Compiling futures-util v0.3.32
   Compiling num-bigint v0.2.6
   Compiling tracing-core v0.1.36
   Compiling typenum v1.19.0
   Compiling getrandom v0.4.2
   Compiling syn v2.0.117
   Compiling futures-sink v0.3.32
   Compiling version_check v0.9.5
   Compiling syn v1.0.109
   Compiling rustix v1.1.4
   Compiling errno v0.3.14
   Compiling socket2 v0.6.3
   Compiling mio v1.1.1
   Compiling signal-hook-registry v1.4.8
   Compiling parking_lot v0.12.5
   Compiling rand_core v0.5.1
   Compiling generic-array v0.14.7
   Compiling num-integer v0.1.46
   Compiling getrandom v0.2.17
   Compiling tower-service v0.3.3
   Compiling bitflags v2.11.0
   Compiling httparse v1.10.1
   Compiling linux-raw-sys v0.12.1
   Compiling regex-syntax v0.8.10
   Compiling heck v0.5.0
   Compiling serde v1.0.228
   Compiling prettyplease v0.2.37
   Compiling rand_core v0.6.4
   Compiling http-body v0.4.6
   Compiling indexmap v1.9.3
   Compiling try-lock v0.2.5
   Compiling find-msvc-tools v0.1.9
   Compiling shlex v1.3.0
   Compiling log v0.4.29
   Compiling fastrand v2.3.0
   Compiling fixedbitset v0.4.2
   Compiling cc v1.2.56
   Compiling want v0.3.1
   Compiling petgraph v0.6.5
   Compiling socket2 v0.5.10
   Compiling axum-core v0.3.4
   Compiling regex-automata v0.4.14
   Compiling futures-channel v0.3.32
   Compiling httpdate v1.0.3
   Compiling hashbrown v0.12.3
   Compiling byteorder v1.5.0
   Compiling ppv-lite86 v0.2.21
   Compiling tempfile v3.27.0
   Compiling multimap v0.10.1
   Compiling utf8parse v0.2.2
   Compiling tower-layer v0.3.3
   Compiling crunchy v0.2.4
   Compiling anstyle-parse v0.2.7
   Compiling rand_chacha v0.3.1
   Compiling rand_chacha v0.2.2
   Compiling rand_xorshift v0.2.0
   Compiling num_cpus v1.17.0
   Compiling axum v0.6.20
   Compiling anstyle v1.0.13
   Compiling rand v0.8.5
   Compiling rand v0.7.3
   Compiling blst v0.3.16
   Compiling zmij v1.0.21
   Compiling tiny-keccak v2.0.2
   Compiling is_terminal_polyfill v1.70.2
   Compiling ff_derive v0.6.0
   Compiling memchr v2.8.0
   Compiling colorchoice v1.0.4
   Compiling thiserror v1.0.69
   Compiling anstyle-query v1.1.5
   Compiling mime v0.3.17
   Compiling anstream v0.6.21
   Compiling regex v1.12.3
   Compiling threadpool v1.8.1
   Compiling block-buffer v0.10.4
   Compiling crypto-common v0.1.7
   Compiling strsim v0.11.1
   Compiling percent-encoding v2.3.2
   Compiling sync_wrapper v0.1.2
   Compiling matchit v0.7.3
   Compiling serde_json v1.0.149
   Compiling bitflags v1.3.2
   Compiling clap_lex v1.0.0
   Compiling digest v0.10.7
   Compiling ff v0.6.0
   Compiling clap_builder v4.5.60
   Compiling hex_fmt v0.3.0
   Compiling iana-time-zone v0.1.65
   Compiling cpufeatures v0.2.17
   Compiling group v0.6.0
   Compiling base64 v0.21.7
   Compiling sha2 v0.10.9
   Compiling hex v0.4.3
   Compiling pairing v0.16.0
   Compiling tokio-macros v2.6.1
   Compiling prost-derive v0.12.6
   Compiling tracing-attributes v0.1.31
   Compiling serde_derive v1.0.228
   Compiling pin-project-internal v1.1.11
   Compiling async-trait v0.1.89
   Compiling zeroize_derive v1.4.3
   Compiling thiserror-impl v1.0.69
   Compiling async-stream-impl v0.3.6
   Compiling tokio v1.50.0
   Compiling clap_derive v4.5.55
   Compiling zeroize v1.8.2
   Compiling async-stream v0.3.6
   Compiling pin-project v1.1.11
   Compiling tracing v0.1.44
   Compiling prost v0.12.6
   Compiling prost-types v0.12.6
   Compiling clap v4.5.60
   Compiling prost-build v0.12.6
   Compiling blsttc v1.0.1
   Compiling chrono v0.4.44
   Compiling tonic-build v0.10.2
   Compiling antid v0.1.1 (/home/paul/dev/antid)
   Compiling tokio-util v0.7.18
   Compiling tokio-io-timeout v1.2.1
   Compiling tokio-stream v0.1.18
   Compiling h2 v0.3.27
   Compiling tower v0.4.13
   Compiling hyper v0.14.32
   Compiling hyper-timeout v0.4.1
   Compiling tonic v0.10.2
error[E0599]: no function or associated item named `from_bytes` found for struct `SecretKey` in the current scope
   --> src/main.rs:126:20
    |
126 |         SecretKey::from_bytes(key_bytes).map_err(|_| anyhow!("Error: In...
    |                    ^^^^^^^^^^ function or associated item not found in `SecretKey`
    |
note: if you're trying to build a new `SecretKey` consider using one of the following associated functions:
      SecretKey::from_mut
      SecretKey::random
   --> /home/paul/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/blsttc-1.0.1/src/lib.rs:371:5
    |
371 |     pub fn from_mut(fr: &mut Fr) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
384 |     pub fn random() -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^
help: there is a method `to_bytes` with a similar name, but with different arguments
   --> /home/paul/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/blsttc-1.0.1/src/lib.rs:421:5
    |
421 |     pub fn to_bytes(&self) -> Vec<u8> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
For more information about this error, try `rustc --explain E0599`.
error: could not compile `antid` (bin "antid") due to 1 previous error